tests/ui/consts/const-eval/generic-slice.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/generic-slice.rs:27:5
   |
LL |     let x: &[_] = &[];
   |         - binding `x` declared here
LL |     &x
   |     ^^
   |     |
   |     borrowed value does not live long enough
   |     using this value as a static requires that `x` is borrowed for `'static`
LL |
LL | };
   | - `x` dropped here while still borrowed

error[E0597]: `x` does not live long enough
  --> $DIR/generic-slice.rs:15:9
   |
LL | impl<'a, T: 'static> Generic<'a, T> {
   |      -- lifetime `'a` defined here
...
LL |         let x: &'static [T] = &[];
   |             - binding `x` declared here
LL |         &x
   |         ^^
   |         |
   |         borrowed value does not live long enough
   |         using this value as a constant requires that `x` is borrowed for `'a`
LL |
LL |     };
   |     - `x` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
